--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <title>Test Doc</title>
 </head>
 <body>
-    <p>This is a test paragraph</p>
+    <div>
+        <h1>site title</h1>
+        <h2>section for webpage</h2>
+        <h3>article heading</h3>
+        <h4>sub navigation inside article</h4>
+    </div>
+
+    <a href="about.html">About us page</a>
+
+    <div>
+        <ul>
+            <li>yoshi</li>
+            <li>luigi</li>
+            <li>toad</li>
+            <li>mario</li>
+            <li>mushroom</li>
+        </ul>
+    </div>
+
+    <div>
+        <p>This is a <small>small</small> test <strong><i>paragraph</i></strong></p>
+    </div>
+    <span>i am a span <br>tag</span>
+
+    <hr>
+
+    <img src="https://api.lorem.space/image/game?w=150&h=220" alt="random game cover">
+
+    <blockquote style="color: red;" cite="http://www.oscarwildesite.com">
+        We are all in the gutter, but some of us are looking at the stars
+    </blockquote>
+
 </body>
 </html>
