--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </div>
 
     <a href="about.html">About us page</a>
+    <br>
+    <a href="acc_form.html">Set up an account</a>
 
     <div>
         <ul>
@@ -35,7 +37,7 @@
 
     <img src="https://api.lorem.space/image/game?w=150&h=220" alt="random game cover">
 
-    <blockquote style="color: red;" cite="http://www.oscarwildesite.com">
+    <blockquote style="color: red" cite="http://www.oscarwildesite.com">
         We are all in the gutter, but some of us are looking at the stars
     </blockquote>
 
