--- a/acc_form.html
+++ b/acc_form.html
@@ -52,7 +52,7 @@
 
         <br><br>
 
-        <input type="submit" value="Submit the form">
+        <input type="submit" value="Submit the form.">
 
     </form>
     
